--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ input[type="checkbox"]
 
  input[type="radio"]
  {
-        border:3px solid  rgb(79, 194, 168);
+       accent-color:rgb(79, 194, 168);
  }
  h3{
     color:rgb(115, 108, 204);
